Update to 0.0.9-SNAPSHOT. JDK 21 compliant.